--- a/nifi-azure-cognitive-processors/pom.xml
+++ b/nifi-azure-cognitive-processors/pom.xml
@@ -22,6 +22,10 @@
 	<artifactId>nifi-azure-cognitive-processors</artifactId>
 	<packaging>jar</packaging>
 
+	<properties>
+		<jackson.version>2.8.6</jackson.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.nifi</groupId>
@@ -31,7 +35,23 @@
 			<groupId>org.apache.nifi</groupId>
 			<artifactId>nifi-utils</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.nifi</groupId>
+			<artifactId>nifi-processor-utils</artifactId>
+		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		
 		<!-- microsoft deps -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
